[package]
name = "libui"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "libui"
path = "lib.rs"

[features]
default = ["syntax"]
# Enable vt100-based tests (emulator) when running with `--features vt100-tests`.
vt100-tests = ["dep:vt100"]
# Syntax highlighting via chaos-highlight (syntect + two-face).
syntax = ["dep:chaos-highlight"]
# Gate verbose debug logging inside the TUI implementation.
debug-logs = []
# Expose test-support helpers (chatwidget::tests, test_render, etc.) to downstream crates.
testing = ["dep:assert_matches", "dep:insta", "dep:pretty_assertions", "dep:rustls"]

[lints]
workspace = true

[dependencies]
# Internal — UI sub-crates
chaos-termcap = { workspace = true }
chaos-highlight = { workspace = true, optional = true }

# Internal — sys/
chaos-kern = { workspace = true }
chaos-ipc = { workspace = true }
chaos-sh = { workspace = true }
chaos-syslog = { workspace = true }
chaos-git = { workspace = true }
chaos-session = { workspace = true }
chaos-services = { workspace = true }
chaos-clamp = { workspace = true }
mcp-guest = { workspace = true }

# Internal — lib/
chaos-amphetamine = { workspace = true }
chaos-getopt = { workspace = true }
chaos-glob = { workspace = true }
chaos-jail-report = { workspace = true }
chaos-locate = { workspace = true }
chaos-pwd = { workspace = true }
chaos-realpath = { workspace = true }
chaos-sudoers = { workspace = true }
chaos-sysinfo = { workspace = true }
chaos-uptime = { workspace = true }
chaos-wchar = { workspace = true }

# External
ansi-to-tui = { workspace = true }
arboard = { workspace = true }
base64 = { workspace = true }
crossterm = { workspace = true, features = ["bracketed-paste", "event-stream"] }
derive_more = { workspace = true, features = ["is_variant"] }
diffy = { workspace = true }
dirs = { workspace = true }
image = { workspace = true, features = ["jpeg", "png", "gif", "webp"] }
itertools = { workspace = true }
jiff = { workspace = true }
pathdiff = { workspace = true }
rand = { workspace = true }
ratatui = { workspace = true, features = [
    "scrolling-regions",
    "unstable-backend-writer",
    "unstable-rendered-line-info",
    "unstable-widget-ref",
] }
ratatui-macros = { workspace = true }
regex-lite = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
shlex = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
pulldown-cmark = { workspace = true }
supports-color = { workspace = true }
supports-hyperlinks = { workspace = true }
toml = { workspace = true }
unicodeit = { workspace = true }
tempfile = { workspace = true }
textwrap = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
    "test-util",
    "time",
] }
tokio-stream = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true, features = ["time"] }
tracing = { workspace = true, features = ["log"] }
unicode-segmentation = { workspace = true }
unicode-width = { workspace = true }
url = { workspace = true }
vt100 = { workspace = true, optional = true }
# testing feature — test-support helpers visible to downstream crates
assert_matches = { workspace = true, optional = true }
insta = { workspace = true, optional = true }
pretty_assertions = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
assert_matches = { workspace = true }
insta = { workspace = true }
pretty_assertions = { workspace = true }
rand = { workspace = true }
rustls = { workspace = true }
serial_test = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["ratatui-macros"]
