[package]
name = "chaos-pledge"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "chaos_pledge"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
libc = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
