[package]
name = "chaos-selinux"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Codex exec policy: prefix-based Starlark rules for command decisions."

[lib]
name = "chaos_selinux"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
chaos-realpath = { workspace = true }
multimap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shlex = { workspace = true }
starlark = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
