[package]
name = "chaos-selinux"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "FreeChaOS exec policy: prefix-based Lua rules for command decisions."

[lib]
name = "chaos_selinux"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
chaos-realpath = { workspace = true }
clap = { workspace = true, features = ["derive"] }
mlua = { workspace = true }
multimap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shlex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
