[package]
name = "chaos-vault"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
age = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
chaos-keyring = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
keyring-core = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
