[package]
name = "chaos-watchdog"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
chaos-ipc = { workspace = true }
chaos-sh = { workspace = true }
chaos-realpath = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
