[package]
edition.workspace = true
license.workspace = true
publish.workspace = true
name = "chaos-arsenal"
version.workspace = true

[lib]
doctest = false
name = "chaos_arsenal"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
chaos-wchar = { workspace = true }
mcp-host = { workspace = true, features = ["macros"] }
schemars = "1.2.1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "process"] }

[dev-dependencies]
anyhow = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
